<!-- activity_main.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_content"
        android:layout_marginStart="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loadButton"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_content"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/char15Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15th_character_result"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/every15thCharResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_15th_character_result"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wordCountResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_count_result"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
